--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="preload" href="/fonts/RacingSansOne-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <style>
+      @font-face {
+        font-family: Ubuntu;
+        src: url(/fonts/Ubuntu-Regular.ttf)  format('truetype'),
+      }
+    </style>
   </head>
   <body>
     <noscript>
